# antiphon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml  site.yml
antiphond/: go.mod  justfile
antiphond/cmd/antiphond/: main.go
antiphond/internal/channel/: channel.go  channel_test.go
antiphond/internal/config/: config.go
antiphond/internal/emit/: emit.go
antiphond/internal/hub/: hub.go  hub_config.go
antiphond/internal/input/: input.go  input_test.go
antiphond/internal/registry/: registry.go  registry_test.go
antiphond/internal/tts/: elevenlabs.go  openai.go  say.go  tts.go  tts_test.go
antiphond/internal/voice/: voice.go  voice_test.go
assets/baked/: antiphon-default.antiphon  antiphon-kemar.antiphon  chamber-default.chamber
cc-chamber/: .mcp.json  README.md  chamber-channel.sh  chamber-tool.sh
cc-chamber/.claude-plugin/: plugin.json
cc-chamber/hooks/: hooks.json  narration.md
chamberd/: go.mod  justfile
chamberd/cmd/chamberd/: main.go
chamberd/internal/channel/: channel.go
chamberd/internal/config/: config.go
chamberd/internal/emit/: emit.go
chamberd/internal/hub/: hub.go  hub_config.go
chamberd/internal/input/: input.go
chamberd/internal/registry/: registry.go  registry_test.go
chamberd/internal/tts/: elevenlabs.go  say.go  tts.go  tts_test.go
chamberd/internal/voice/: voice.go
crates/antiphon-assets/: Cargo.toml
crates/antiphon-assets/src/: lib.rs
crates/antiphon-bake/: Cargo.toml
crates/antiphon-bake/src/: main.rs
crates/antiphon-dsp/: Cargo.toml
crates/antiphon-dsp/src/: hrtf.rs  lib.rs  reverb.rs
crates/antiphon-ffi/: Cargo.toml
crates/antiphon-ffi/src/: lib.rs
crates/antiphon-pose/: Cargo.toml
crates/antiphon-pose/src/: lib.rs
crates/antiphon-render/: Cargo.toml
crates/antiphon-render/src/: main.rs
crates/chamber-assets/: Cargo.toml
crates/chamber-assets/src/: lib.rs
crates/chamber-bake/: Cargo.toml
crates/chamber-bake/src/: main.rs
crates/chamber-dsp/: Cargo.toml
crates/chamber-dsp/src/: attention.rs  dvf.rs  hrtf.rs  lib.rs  math.rs  reverb.rs  voice.rs
crates/chamber-ffi/: Cargo.toml
crates/chamber-ffi/src/: lib.rs
crates/chamber-pose/: Cargo.toml
crates/chamber-pose/src/: lib.rs
crates/chamber-render/: Cargo.toml
crates/chamber-render/src/: main.rs
docs/: agent-bridge.md  build.md  conventions.md  docusaurus.config.ts  package.json  sidebars.ts  sofa.md  web.md
docs-site/: docusaurus.config.ts  package.json  sidebars.ts
docs-site/blog/: authors.yml
docs-site/docs/: development.md  getting-started.md  web-demo.md
docs-site/docs/agents/: aider.md  claude-code.md  codex.md  opencode.md  pi.md
docs-site/i18n/ru/: code.json
docs-site/i18n/ru/docusaurus-plugin-content-blog/: options.json
docs-site/i18n/ru/docusaurus-plugin-content-docs/: current.json
docs-site/i18n/zh-Hans/docusaurus-plugin-content-blog/: 2026-07-03-about-antiphon.mdx  options.json
docs-site/i18n/zh-Hans/docusaurus-theme-classic/: navbar.json
docs-site/i18n/zh-Hant/: code.json
docs/blog/: 2026-07-03-about-antiphon.mdx
docs/docs/: development.md  engine.md  index.md  install.md  privacy.md
docs/docs/agents/: aider.md  index.md  opencode.md
docs/i18n/zh-Hans/: code.json
docs/internal/: build.md  conventions.md  web.md
docs/src/css/: custom.css
native/AntiphonApp/: Antiphon.entitlements  Info.plist  make.sh
native/AntiphonApp/Sources/: Agents.swift  AntiphonApp.swift  AntiphonEngine.swift  AudioGen.swift  BridgeClient.swift  EyeClosure.swift  FaceTracker.swift  L10n.swift  Onboarding.swift  Radar.swift  SettingsView.swift  Sidebar.swift  StatusBar.swift  SystemAudioTap.swift  TalkbackPanel.swift  UpdateCheck.swift
native/CAntiphon/: antiphon.h  bridge.h
native/CChamber/: bridge.h  chamber.h
native/ChamberApp/: Info.plist  make.sh
native/ChamberApp/Resources/: Antiphon.icns
native/ChamberApp/Sources/: AudioGen.swift  BridgeClient.swift  CameraPreview.swift  ChamberApp.swift  ChamberEngine.swift  EyeClosure.swift  FaceTracker.swift  L10n.swift  Onboarding.swift  Radar.swift  SettingsView.swift  Sidebar.swift  StatusBar.swift  TalkbackPanel.swift
plugins/: README.md
plugins/aider/: README.md  antiphon-aider
plugins/claude-code/: .mcp.json  README.md  antiphon-channel.sh  antiphon-tool.sh
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json  narration.md
plugins/codex/: README.md  antiphon-blocked.sh  antiphon-channel.sh  antiphon-lib.sh  antiphon-stop.sh  antiphon-tool.sh  config.toml  install.sh
plugins/codex/hooks/: hooks.json  narration.md
plugins/opencode/: README.md  index.ts  package.json
plugins/pi/: README.md  index.ts  package.json
tools/: build-web.sh  fetch-sofa.sh  gen-demo-voices.py  gen-hero-audio.py  gen-icon.py  gen-onboarding-voices.py  parity.mjs  sound_concepts.py  tag.sh
tools/shootout/: CANDIDATE_PROMPT.md  FINDINGS.md  README.md  SUPERVISOR.md  build-live.sh  ingest.py  live-manifest.py
tools/shootout/elo/: index.html
tools/shootout/live/: index.html  swap-worklet.js
web/: .env.example  arp-lab.html  attention-demo.html  chamber-worklet.js  demo.html  index.html  justfile  package.json  sandbox.html  test.html  tsconfig.json  vite.config.ts
web/bridge/: mock.ts  roster.ts  server.ts  tts.ts
web/public/: antiphon-worklet.js  chamber-worklet.js  hero-demo.en.m4a  hero-demo.m4a  hero-demo.ru.m4a  hero-demo.zh-Hans.m4a  hero-demo.zh-Hant.m4a
web/src/: agents.ts  demoI18n.ts  main.ts  math.ts  test.ts  types.ts  version.ts
web/src/audio/: earcons.ts  engine.ts  impulse.ts  sfx.ts  wasmEngine.ts
web/src/demo/: lines.json  scenario.ts
web/src/live/: bridge.ts
web/src/sandbox/: arp.ts  main.ts  scene3d.ts
web/src/site/: hero-timeline.en.json  hero-timeline.json  hero-timeline.ru.json  hero-timeline.zh-Hans.json  hero-timeline.zh-Hant.json  hero.css  hero.ts  i18n.ts  main.ts  site.css
web/src/tracking/: eyeClosure.ts  headTracking.ts
web/src/ui/: agentList.ts  radar.ts  styles.css
(+57 files in other folders)
