[workspace]
resolver = "2"
members = [
    "crates/chamber-assets",
    "crates/chamber-dsp",
    "crates/chamber-bake",
    "crates/chamber-render",
    "crates/chamber-ffi",
    "crates/chamber-pose",
]
# chamber-ffi is the single C-ABI surface used by BOTH hosts:
#   native: built as a staticlib and linked into the Swift app
#   web:    built for wasm32 and driven from the AudioWorklet via raw WebAssembly

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
realfft = "3.4"
hound = "3.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
