[package]
name = "antiphon-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Compact .antiphon binary format (HRTF grid + room presets) with a zero-dependency reader."

[features]
default = []
# `write` pulls in the serializer used by the offline baker. The runtime never needs it.
write = []

[dependencies]
