[package]
name = "antiphon-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Real-time binaural rendering core. Platform-agnostic; builds for native and wasm32. No I/O, no threads, no allocation on the audio thread."

[lib]
crate-type = ["rlib"]

[dependencies]
antiphon-assets = { path = "../antiphon-assets" }
fft-convolver = "0.2"
wide = "0.7"

[dev-dependencies]
antiphon-assets = { path = "../antiphon-assets", features = ["write"] }
