[package]
name = "antiphon-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Offline scene -> stereo WAV renderer. The audible quality-check and parity oracle."

[[bin]]
name = "antiphon-render"
path = "src/main.rs"

[dependencies]
antiphon-assets = { path = "../antiphon-assets" }
antiphon-dsp = { path = "../antiphon-dsp" }
hound = { workspace = true }
